# cityseg-project

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_dataset_exploration.ipynb  02_mapping_validation.ipynb  03.5_train_unet_baseline_without_augment.ipynb  03_tfdata_sanity.ipynb  04.5_train_unet_baseline_full_augment.ipynb  04_train_unet_baseline.ipynb  05_visual_validation.ipynb  06_train_vgg16_unet.ipynb  mlflow.db
scripts/: infer.py
src/api/: app.py
src/data/: build_manifest.py  cityscapes_labels.py  cityscapes_mapping.py  cityscapes_tfdata.py
src/inference/: cityseg_infer.py  palette.py
src/models/: metrics.py  unet.py  vgg16_unet.py
tests/: test_api.py  test_inference.py
ui_streamlit/: Dockerfile  app.py
